force-app/main/default/objects/Student_Portal_Tile_Menu_Visibility_Rule__mdt/Student_Portal_Tile_Menu_Visibility_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Student Portal Tile Menu Visibility Rule</label>
    <pluralLabel>Student Portal Tile Menu Visibility Rule</pluralLabel>
</CustomObject>