force-app/main/default/objects/Student_Portal_Tile_Menu_Visibility_Rule__mdt/fields/Assessment__c.field-meta.xml
<CustomField>
    <fullName>Assessment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will define the visibility of assessment tile menu</description>
    <label>Assessment</label>
    <type>Checkbox</type>
</CustomField>