force-app/main/default/objects/Student_Portal_Tile_Menu_Visibility_Rule__mdt/fields/Examination__c.field-meta.xml
<CustomField>
    <fullName>Examination__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will define the visibility of examination tile menu</description>
    <label>Examination</label>
    <type>Checkbox</type>
</CustomField>