force-app/main/default/objects/Student_Portal_Tile_Menu_Visibility_Rule__mdt/fields/FeesAndPayments__c.field-meta.xml
<CustomField>
    <fullName>FeesAndPayments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will define the visibility of feesandpayments tile menu</description>
    <label>FeesAndPayments</label>
    <type>Checkbox</type>
</CustomField>