force-app/main/default/objects/Student_Portal_Tile_Menu_Visibility_Rule__mdt/fields/Hostel__c.field-meta.xml
<CustomField>
    <fullName>Hostel__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Hostel</label>
    <type>Checkbox</type>
</CustomField>