force-app/main/default/objects/Student_Portal_Tile_Menu_Visibility_Rule__mdt/fields/MentorOrMentee__c.field-meta.xml
<CustomField>
    <fullName>MentorOrMentee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will define the visibility of mentorormentee tile menu</description>
    <label>MentorOrMentee</label>
    <type>Checkbox</type>
</CustomField>