force-app/main/default/objects/Student_Portal_Tile_Menu_Visibility_Rule__mdt/fields/Placement__c.field-meta.xml
<CustomField>
    <fullName>Placement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will determine the visibility of placement tile menu</description>
    <label>Placement</label>
    <type>Checkbox</type>
</CustomField>