force-app/main/default/objects/Student_Portal_Tile_Menu_Visibility_Rule__mdt/fields/SupportRequest__c.field-meta.xml
<CustomField>
    <fullName>SupportRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will determine the visibility of support request tile menu</description>
    <label>SupportRequest</label>
    <type>Checkbox</type>
</CustomField>