force-app/main/default/objects/Student_Portal_Tile_Menu_Visibility_Rule__mdt/fields/TimeTable__c.field-meta.xml
<CustomField>
    <fullName>TimeTable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will determine the visibility of timetable tile menu</description>
    <label>TimeTable</label>
    <type>Checkbox</type>
</CustomField>